# lab6

./: CMakeLists.txt  CPackConfig.cmake  DESCRIPTION  LICENSE  README.md
.github/workflows/: main.yml  release.yml
TEST/: CMakeLists.txt  test.cpp
file/: CMakeLists.txt  calc.cpp  calc.h
tests/: test.cpp
